<resources>
    <string name="app_name">Suitmedia-1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_screen_background">First screen background</string>
    <string name="photo_icon">Photo icon</string>
    <string name="check">CHECK</string>
    <string name="next">NEXT</string>
    <string name="second_screen">Second Screen</string>
    <string name="back_button">Back button</string>
    <string name="choose_a_user">Choose a User</string>
    <string name="selected_user_name">Selected User Name</string>
    <string name="welcome">Welcome</string>
    <string name="john_doe">John Doe</string>
    <string name="third_screen">Third Screen</string>
    <string name="name">Name</string>
    <string name="palindrome">Palindrome</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="retry">Retry</string>
</resources>