<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingHorizontal="33dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presenter.first_screen.FirstScreenFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/ic_photo"
            android:layout_width="116dp"
            android:layout_height="116dp"
            android:src="@drawable/ic_photo"
            android:contentDescription="@string/photo_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            style="@style/EditTextStyle"
            android:id="@+id/ed_name"
            android:hint="@string/name"
            android:inputType="text"
            android:paddingVertical="8dp"
            android:paddingHorizontal="16dp"
            android:layout_marginTop="51dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ic_photo"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            style="@style/EditTextStyle"
            android:id="@+id/ed_palindrome"
            android:hint="@string/palindrome"
            android:inputType="text"
            android:paddingVertical="8dp"
            android:paddingHorizontal="16dp"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_name"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            style="@style/ButtonStyle"
            android:id="@+id/btn_check"
            android:layout_marginTop="45dp"
            android:text="@string/check"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_palindrome"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            style="@style/ButtonStyle"
            android:id="@+id/btn_next"
            android:layout_marginTop="15dp"
            android:text="@string/next"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_check"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>